fix index.html and add crunchy_rice_paper_egg.html and vegan_ranch.html

--- a/recipes/quick_beef_stir-fry.html
+++ b/recipes/quick_beef_stir-fry.html
@@ -7,6 +7,30 @@
 
 <body>
 	<h1>Quick Beef Stir Fry</h1>
+	<h2>Description</h2>
+	<p>Quick and easy beef stir-fry. I make this on my busiest weeknights.</p>
+	<h2>Ingredients</h2>
+	<ul>
+		<li>2 tbsp vegetable oil</li>
+		<li>454 grams beef sirloin</li>
+		<li>1½ cups fresh broccoli florets</li>
+		<li>1 red bell pepper cut into matchsticks</li>
+		<li>2 carrots thinly sliced</li>
+		<li>1 chopped green onion</li>
+		<li>2 tbsp sesame seeds</li>
+		<li>2 tbsp soy sauce</li>
+		<li>1 tsp minced garlic</li>
+	</ul>
+	<h2>Directions</h2>
+	<ol>
+		<li>Heat vegetable oil in a large wok or skillet over medium-high heat; cook and stir beef until browned, 3 to 4
+			minutes.
+		<li>Move beef to the side of the wok and add broccoli, bell pepper, carrots, green onion, and garlic to the center
+			of the wok.</li>
+		<li>Cook and stir vegetables for 2 minutes.</li>
+		<li>Stir beef into vegetables and season with soy sauce and sesame seeds.</li>
+		<li>Continue to cook and stir until vegetables are tender, about 2 more minutes.</li>
+	</ol>
 </body>
 
 </html>
