Fix links in index and build 2 more recipes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <body>
 	<h1>Odin Recipes</h1>
-	<img src="images/quick_beef_stir-fry.webp" alt="Quick Beef Stir-fry">
 	<ul>
 		<li><a href="recipes/quick_beef_stir-fry.html">Quick Beef Stir-Fry</a></li>
-		<li><a href="recipes/"</li>
+		<li><a href="recipes/vegan_ranch.html">Vegan Ranch</a></li>
+		<li><a href="recipes/crunchy_rice_paper_egg.html">Crunchy Rice Paper Eggs</a></li>
 	</ul>
 
 </body>
