--- a/recipes/crunchy_rice_paper_egg.html
+++ b/recipes/crunchy_rice_paper_egg.html
@@ -3,11 +3,29 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Crunchy Rice Paper Eggs</title>
 </head>
 
 <body>
-
+	<h1>Crunchy Rice Paper Eggs</h1>
+	<img src="../images/crunchy_rice_paper_egg.png" alt="Crunchy Rice Paper Eggs" width="25%" height="25%">
+	<h2>Description</h2>
+	<p>This is the perfect, easy to make and healthy breakfast.</p>
+	<h2>Ingredients</h2>
+	<ul>
+		<li>1 rice paper</li>
+		<li>oil</li>
+		<li>chili flakes (soup kind)</li>
+		<li>1 egg</li>
+		<li>spring onion</li>
+		<li>sriracha</li>
+		<li>mayo</li>
+	</ul>
+	<h2>Directions</h2>
+	<ol>
+		<li>Oil the paper and put flakes on it</li>
+		<li>Crack an egg and keep mixing on medium high heat till it’s evenly distributed (mixing is important)</li>
+	</ol>
 </body>
 
 </html>
