--- a/recipes/quick_beef_stir-fry.html
+++ b/recipes/quick_beef_stir-fry.html
@@ -3,10 +3,12 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>Quick Beef Stir-Fry</title>
 </head>
 
 <body>
 	<h1>Quick Beef Stir Fry</h1>
+	<img src="../images/quick_beef_stir-fry.webp" alt="Quick Beef Stir-fry" width="25%" height="25%"">
 	<h2>Description</h2>
 	<p>Quick and easy beef stir-fry. I make this on my busiest weeknights.</p>
 	<h2>Ingredients</h2>
