--- a/recipes/vegan_ranch.html
+++ b/recipes/vegan_ranch.html
@@ -3,11 +3,26 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Vegan Ranch</title>
 </head>
 
 <body>
-
+	<h1>Vegan Ranch</h1>
+	<h2>Description</h2>
+	<p>Simple and delicious side to many meals</p>
+	<h2>Ingredients</h2>
+	<ul>
+		<li>Almond milk(60ml)</li>
+		<li>Lemon juice(15ml)</li>
+		<li>Mayonnaise(120ml)</li>
+		<li>Dill</li>
+		<li>Parsley</li>
+	</ul>
+	<h2>Directions</h2>
+	<ol>
+		<li>Cut up the parsley and Dill</li>
+		<li>Mix everything together and serve</li>
+	</ol>
 </body>
 
 </html>
