Add and link vegan_ranch img

--- a/recipes/vegan_ranch.html
+++ b/recipes/vegan_ranch.html
@@ -8,6 +8,7 @@
 
 <body>
 	<h1>Vegan Ranch</h1>
+	<img src="../images/vegan_ranch.jpg" alt="Vegan Ranch" width="25%" height="25%">
 	<h2>Description</h2>
 	<p>Simple and delicious side to many meals</p>
 	<h2>Ingredients</h2>
