--- a/recipes/quick_beef_stir-fry.html
+++ b/recipes/quick_beef_stir-fry.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Quick Beef Stir Fry</h1>
-	<img src="../images/quick_beef_stir-fry.webp" alt="Quick Beef Stir-fry" width="25%" height="25%"">
+	<img src="../images/quick_beef_stir-fry.webp" alt="Quick Beef Stir-fry" width="25%" height="25%">
 	<h2>Description</h2>
 	<p>Quick and easy beef stir-fry. I make this on my busiest weeknights.</p>
 	<h2>Ingredients</h2>
