--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<title>Odin Recipes</title>
-</head>
-
-<body>
-	<h1>Odin Recipes</h1>
-	<ul>
-		<li><a href="recipes/quick_beef_stir-fry.html">Quick Beef Stir-Fry</a></li>
-		<li><a href="recipes/vegan_ranch.html">Vegan Ranch</a></li>
-		<li><a href="recipes/crunchy_rice_paper_egg.html">Crunchy Rice Paper Eggs</a></li>
-	</ul>
-
-</body>
-
+  <body>
+    <div>
+      <h1>Odin Recipes</h1>
+      <ul>
+        <li><a href="recipes/quick_beef_stir-fry.html">Quick Beef Stir-Fry</a></li>
+        <li><a href="recipes/vegan_ranch.html">Vegan Ranch</a></li>
+        <li><a href="recipes/crunchy_rice_paper_egg.html">Crunchy Rice Paper Eggs</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
